# nanokvm-control-api

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: build.yaml  integration.yaml  lint.yaml  test.yaml
deploy/: nanokvm-cleanup.service  nanokvm-cleanup.timer  nanokvm-control-api.service
docs/plans/: 2026-02-28-redfish-rebuild-design.md  2026-03-01-disk-boot-iso-design.md  2026-03-01-disk-boot-iso.md  2026-03-01-redfish-rebuild.md  2026-03-05-nanokvm-configfs-design.md  2026-03-05-redfish-tasks-design.md  2026-03-05-redfish-tasks.md  task.md
src/: auth.rs  cli.rs  config.rs  control.rs  error.rs  main.rs  management.rs  state.rs
src/nanokvm/: client.rs  mock.rs  mod.rs
src/power/: gpio.rs  mock.rs  mod.rs
src/redfish/: actions.rs  managers.rs  mod.rs  models.rs  systems.rs  tasks.rs
src/virtual_media/: cleanup.rs  controller.rs  manager.rs  mock.rs  mock_controller.rs  mod.rs
tests/: docker-compose.yml
tests/integration/: Dockerfile.api  Dockerfile.test  config.test.toml  requirements.txt  test_redfish.py  validate_redfish.sh
tools/disk-boot-iso/: Dockerfile  build.sh  grub.cfg
