[package]
name = "nanokvm-control-api"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.49", features = ["rt", "macros", "time", "fs", "io-util", "net"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[target.'cfg(target_os = "linux")'.dependencies]
gpiocdev = "0.8"
